# flight-analyzer-sample

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ai-code-review.yml  ci-cd.yml  security-scan.yml
docs/: AI_AUTOMATION_GUIDE.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FILE_INDEX.md  PROJECT_STRUCTURE.md  QUICK_START.md
src/: __init__.py  analyzer.py  api_server.py  data_collector.py  data_processor.py  report_generator.py
tests/: __init__.py  test_analyzer.py  test_data_collector.py  test_data_processor.py  test_report_generator.py
