[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-data-analyzer"
version = "1.0.0"
description = "무기체계 소프트웨어 개발을 위한 비행 데이터 분석 시스템"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Public Domain"}
authors = [
    {name = "Defense AI Team", email = "team@example.com"}
]
keywords = ["flight", "data analysis", "defense", "AI", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.3",
    "flake8>=7.0.0",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "safety>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/flight-data-analyzer"
Documentation = "https://github.com/your-org/flight-data-analyzer/docs"
Repository = "https://github.com/your-org/flight-data-analyzer"
Issues = "https://github.com/your-org/flight-data-analyzer/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]
